--- a/web/themes/ipu/src/sass/_ipu-variables.scss
+++ b/web/themes/ipu/src/sass/_ipu-variables.scss
@@ -83,6 +83,7 @@ $input-btn-padding-x: 0.125rem !default;
 
 // Blockquote variables
 $blockquote-font-size: $font-size-lg;
+$font-size-xxs: 0.6rem;
 
 // Border overrides
 $border-radius: 0;
