--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -525,6 +525,7 @@ a.btn {
   letter-spacing: 0.05rem;
   padding: 0.125rem 0.5rem;
   width: 100%;
+  margin-top: 10px;
 }
 .stats-women {
   background-color: transparent;
@@ -1145,6 +1146,23 @@ a.btn {
 // Events listings
 .viewfield--view__events {
   // Upcoming and prev
+
+  .form-item-field-event-type-target-id {
+    background-color: $light;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    label {
+      font-size: $font-size-xs;
+      margin: 0;
+    }
+    select {
+      width: auto;
+      margin-left: 10px;
+      font-size: $font-size-xs;
+    }
+  }
+
   &.viewfield--view__events__block, &.viewfield--view__events__block_upcoming {
     .node--type-ipu-event {
       margin-top: 20px;
@@ -1176,11 +1194,13 @@ a.btn {
       margin-bottom: 0;
     }
     .ipu-event__field-summary {
-      font-size: $font-size-sm;
+      font-size: $font-size-base;
+      line-height: 1.1rem;
+      padding-bottom: 10px;
     }
   }
   .field-event-type {
-    font-size: 0.6rem;
+    font-size: $font-size-xxs;
     line-height: 1;
     background: $ipu-grey;
     text-transform: uppercase;
@@ -1267,7 +1287,8 @@ a.btn {
 .field-content-section {
   .field__item {
   }
-  .field__item__paragraph__carousel {
+  .field__item__paragraph__carousel,
+  .field__item__paragraph__carousel-slides {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: $light;
