--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -19607,6 +19607,13 @@ a.more-data-parline, .article__node-link a,
   width: 100%;
   margin-top: 10px;
 }
+.stats-more-link:after {
+  font-family: "Font Awesome 5 Free", sans-serif;
+  content: "\F061";
+  font-weight: 900;
+  margin-left: 4px;
+  font-size: 0.825rem;
+}
 
 .stats-women {
   background-color: transparent;
@@ -19756,7 +19763,7 @@ a.more-data-parline, .article__node-link a,
 .article__node-link a:after,
 .ipu-event__node-link a:after {
   padding-left: 5px;
-  font-family: "Font Awesome 5 Free";
+  font-family: "Font Awesome 5 Free", sans-serif;
   content: "\F061";
   font-weight: 900;
   -moz-osx-font-smoothing: grayscale;
