--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -526,6 +526,13 @@ a.btn {
   padding: 0.125rem 0.5rem;
   width: 100%;
   margin-top: 10px;
+  &:after {
+    font-family: "Font Awesome 5 Free", sans-serif;
+    content: "\F061";
+    font-weight: 900;
+    margin-left: 4px;
+    font-size: $font-size-xs;
+  }
 }
 .stats-women {
   background-color: transparent;
@@ -711,7 +718,7 @@ a.btn {
 
   &:after {
     padding-left: 5px;
-    font-family: "Font Awesome 5 Free";
+    font-family: "Font Awesome 5 Free", sans-serif;
     content: "\f061";
     font-weight: 900;
     -moz-osx-font-smoothing: grayscale;
