--- a/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-data-points.html.twig
+++ b/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-data-points.html.twig
@@ -15,7 +15,7 @@
     <h2 class="sr-only">Data points:</h2>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-6 col-lg-3">
                 <div class="card h-100 card-members">
                     <div class="term-icon term-icon-19 card-header">
                         <span class="data-point-title">IPU member parliaments</span>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             {% if stats.women is not same as(null) %}
-            <div class="col-md-3">
+            <div class="col-md-6 col-lg-3">
                 <div class="card h-100 card-current-women-percent">
                     <div class="term-icon term-icon-88 card-header">
                         <span class="data-point-title">{{ language_id == 'fr' ? 'Femmes dans les parlements' : stats.women.title}}</span>
@@ -51,7 +51,7 @@
             {% endif %}
 
             {% if stats.under45 is not same as(null) %}
-            <div class="col-md-3">
+            <div class="col-md-6 col-lg-3">
                 <div class="card h-100 card-under-45-percent">
                     <div class="term-icon term-icon-117 card-header">
                         <span class="data-point-title">{{ stats.under45.title }}</span>
@@ -72,7 +72,7 @@
             {% endif %}
 
             {% if stats.humanrights is not same as(null) %}
-            <div class="col-md-3">
+            <div class="col-md-6 col-lg-3">
                 <div class="card h-100">
                     <div class="term-icon term-icon-82 card-header">
                         <span class="data-point-title">{{ stats.humanrights.title }}</span>
