--- a/web/themes/ipu/templates/file/file-entity-download-link.html.twig
+++ b/web/themes/ipu/templates/file/file-entity-download-link.html.twig
@@ -34,5 +34,5 @@
 %}
 <span {{ attributes.addClass(classes) }}>
     {{ download_link }}
-    <span class="file-size">({{ file_size }})</span>
+    <span class="file-size">{{ file_size }}</span>
 </span>
