--- a/web/themes/ipu/templates/field/field--default--node--node-title--landing-page.html.twig
+++ b/web/themes/ipu/templates/field/field--default--node--node-title--landing-page.html.twig
@@ -29,7 +29,7 @@
     </div>
   {% else %}
     {% for item in items %}
-        <div{{ attributes.addClass(classes) }}><div class="field-node-title-inner">{{ item.content }}</div></div>
+      <div{{ attributes.addClass(classes) }}><div class="field-node-title-wrapper"><div class="field-node-title-inner">{{ item.content }}<div class="field-node-title-theme-description">{{ theme_description|striptags }}</div></div></div></div>
     {% endfor %}
   {% endif %}
 {% else %}
