--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1177,6 +1177,7 @@ a.btn {
       margin-top: 20px;
       border: 1px solid $ipu-light-grey;
       width: calc(100% - 60px);
+      margin-left: 3px;
     }
     .group-content {
       padding-top: 1rem;
