--- a/web/themes/ipu/src/sass/navigation/_nav.scss
+++ b/web/themes/ipu/src/sass/navigation/_nav.scss
@@ -342,7 +342,8 @@ ol.breadcrumb {
   }
   .block .section-page__body,
   .block .landing-page__body,
-  .block .ipu-event__field-summary {
+  .block .ipu-event__field-summary,
+  .block .ipu-event__field-location {
     color: $ipu-dark-grey;
   }
 }
