Update config so page title shows in the right place in page layout.

--- a/web/themes/ipu/src/sass/_ipu-variables.scss
+++ b/web/themes/ipu/src/sass/_ipu-variables.scss
@@ -78,6 +78,8 @@ $dark:      $ipu-grey;
 .btn-sm {
   padding: 0.1rem 0.5rem;
 }
+$custom-select-line-height: 1.6rem;
+
 $input-btn-padding-y: 0.125rem !default;
 $input-btn-padding-x: 0.125rem !default;
 
