--- a/web/themes/ipu/src/sass/ipu.style.scss
+++ b/web/themes/ipu/src/sass/ipu.style.scss
@@ -87,6 +87,7 @@ $spacers: map-merge(
 @import "navigation/nav";
 @import "content/node.page";
 @import "content/node.article";
+@import "base/forms";
 
 /* Add 5 card layouts */
 .col-xs-5ths,
