--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1240,6 +1240,7 @@ a.btn {
     }
     label {
       font-size: $font-size-sm;
+      font-weight: $font-weight-normal;
     }
     select {
       width: auto;
