Remove views-inner from default views template.

--- a/web/themes/ipu/templates/views/views-view.html.twig
+++ b/web/themes/ipu/templates/views/views-view.html.twig
@@ -60,7 +60,7 @@
     {{ attachment_before }}
 
     {% if rows -%}
-        <div class="views-inner">{{ rows }}</div>
+        {{ rows }}
     {% elseif empty -%}
         {{ empty }}
     {% endif %}
