Update events -> multiple_ids view to next (within 3 months and prev 4 events) with multiple ids and style nicely.

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1310,7 +1310,8 @@ a.btn {
   &.viewfield--view__events__block,
   &.viewfield--view__events__block_upcoming,
   &.viewfield--view__events__block_past,
-  &.viewfield--view__events__assembly_listing {
+  &.viewfield--view__events__assembly_listing,
+  &.viewfield--view__events__multiple_ids {
     .node--type-ipu-event {
       margin-top: 20px;
       border: 1px solid $ipu-light-grey;
